prob1/output.txt
  File "submitted.py", line 2
    print(2)
        ^
SyntaxError: invalid syntax
